--- a/autotest/templates/home.html
+++ b/autotest/templates/home.html
@@ -114,11 +114,11 @@
           <div class="content-viewport">
             <div class="row">
               <div class="col-12 py-5">
-                <h4>Note</h4>
-                <p class="text-gray">Wirte by author.</p>
+                <h4>Hourly News</h4>
+                <p class="text-gray"></p>
               </div>
             </div>
-            <div class="row" style="height: 750px;">
+            <div class="row">
               <div class="col-lg-12 col-md-12 equel-grid">
                 <div class="grid">
                   <div class="grid-body d-flex flex-column h-100">
@@ -126,10 +126,10 @@
                       <div class="d-flex justify-content-between">
                         <div class="split-header">
                           <img class="img-ss mt-1 mb-1 mr-2" src="{% static 'images/social-icons/instagram.svg' %}" alt="instagram">
-                          <h5 class="card-title">Manual of folders</h5>
+                          <h5 class="card-title">CSDN</h5>
                         </div>
                       </div>
-                        <pre class="text-gray" style="font-size: 14px;">{{ manual_of_folders }}</pre>
+                        <pre class="text-gray" style="font-size: 14px;"><h6><br><br>     Empty data.<h6></pre>
                     </div>
                   </div>
                 </div>
@@ -143,10 +143,10 @@
                       <div class="d-flex justify-content-between">
                         <div class="split-header">
                           <img class="img-ss mt-1 mb-1 mr-2" src="{% static 'images/social-icons/instagram.svg' %}" alt="instagram">
-                          <h5 class="card-title">Common Issues</h5>
+                          <h5 class="card-title">TESTERHOME</h5>
                         </div>
                       </div>
-                        <pre class="text-gray" style="font-size: 14px;">{{ common_issues }}</pre>
+                        <pre class="text-gray" style="font-size: 14px;"><h6><br><br>     Empty data.<h6></pre>
                     </div>
                   </div>
                 </div>
