--- a/autotest/templates/home.html
+++ b/autotest/templates/home.html
@@ -94,7 +94,33 @@
             </a>
           </li>
           <li>
-            <a href="/result/">
+            <a href="/automation/result/">
+              <span class="link-title">结果</span>
+              <i class="mdi mdi-application link-icon"></i>
+            </a>
+          </li>
+          <li class="nav-category-divider">API TESTING</li>
+          <li>
+            <a href="/api/">
+              <span class="link-title">接口测试</span>
+              <i class="mdi mdi-application link-icon"></i>
+            </a>
+          </li>
+          <li>
+            <a href="/api/result/">
+              <span class="link-title">结果</span>
+              <i class="mdi mdi-application link-icon"></i>
+            </a>
+          </li>
+          <li class="nav-category-divider">STRESS TESTING</li>
+          <li>
+            <a href="/stress/">
+              <span class="link-title">压力测试</span>
+              <i class="mdi mdi-application link-icon"></i>
+            </a>
+          </li>
+          <li>
+            <a href="/stress/result/">
               <span class="link-title">结果</span>
               <i class="mdi mdi-application link-icon"></i>
             </a>
